# cggmp21

./: .gitignore  Cargo.toml  HIERARCHICAL_THRESHOLD_WASM_IMPLEMENTATION.md  benchmark_with_cache.sh  package-lock.json  package.json  run_bench.sh  vy.md
PRD/: prd.md  task-1-define-keygenstate-and-keygenprotocol-structs.md  task-10-implement-keygenprotocol-round3-process-decommitments-and-shares-and-generate-schnorr-proof.md  task-11-expose-and-integrate-round3-process-decommitments-and-shares-and-generate-schnorr-proof.md  task-12-implement-keygenprotocol-finalize-keygen.md  task-13-expose-and-integrate-finalize-keygen-and-return-corekeyshare.md  task-14-hardening-testing-and-refinement.md  task-2-implement-keygenprotocol-new-constructor.md  task-3-implement-keygenprotocol-round1-generate-commitment.md  task-4-expose-keygenprotocol-constructor-and-round-1-to-wasm.md  task-5-update-worker-js-for-keygenprotocol-instantiation-and-round-1-execution.md  task-6-implement-keygenprotocol-round1-receive-commitments-and-prep-reliability-check.md  task-7-expose-and-integrate-round1-receive-commitments-and-prep-reliability-check.md  task-8-implement-keygenprotocol-round2-process-reliability-and-generate-broadcast-and-p2p.md  task-9-expose-and-integrate-round2-process-reliability-and-generate-broadcast-and-p2p.md  task_1.md  task_10.md  task_11.md  task_12.md  task_2.md  task_3.md  task_4.md  task_5.md  task_6.md  task_7.md  task_8.md  task_9.md  wasm_prd.md
backup/: birkhoff_interpolation.rs  poly.txt
birkhoff/: Cargo.toml
birkhoff/src/: birkhoff_coefficient.rs  birkhoff_error.rs  birkhoff_matrix.rs  lib.rs  matrix.rs  polynomial.rs
cggmp21/: Cargo.toml
cggmp21-keygen/: Cargo.toml  README.md
cggmp21-keygen/examples/web-demo/: index.html  package.json  server.js  websocket.js
cggmp21-keygen/src/: execution_id.rs  hierarchical_threshold.rs  hierarchical_threshold_stateful.rs  lib.rs  non_threshold.rs  progress.rs  round_message_impl.rs  security_level.rs  threshold.rs  threshold_stateful.rs  utils.rs
cggmp21-keygen/src/utils/: hex_or_bin.rs
cggmp21-wasm/: .gitignore  CONSOLIDATION_SUMMARY.md  Cargo.toml  README_SIGNING.md  TASK1_PLAN.md  TASK1_SUMMARY.md  TASK2_PLAN.md  TASK2_SUMMARY.md  TASK3_PLAN.md  TASK3_SUMMARY.md  TASK4_PLAN.md  TASK4_SUMMARY.md  TASK5_PLAN.md  TASK5_SUMMARY.md  build.sh  serve.js
cggmp21-wasm/src/: lib.rs
cggmp21-wasm/src/key_refresh/: aux_only.rs  mod.rs
cggmp21-wasm/src/keygen/: hierarchical_threshold.rs  messages.rs  mod.rs  threshold.rs
cggmp21-wasm/src/signing/: mod.rs  stateful.rs
cggmp21-wasm/tests/: HIERARCHICAL_THRESHOLD_README.md  WEB_WORKER_GUIDE.md  test_hierarchical_demo.html  test_hierarchical_demo.js  test_hierarchical_demo_worker.js  test_hierarchical_pipeline.html  test_hierarchical_pipeline.js  test_hierarchical_signing_worker.js  test_hierarchical_threshold_simple.js  test_hierarchical_worker.js  test_stateful_aux_gen.html  test_stateful_aux_gen.js  test_stateful_hierarchical_threshold_keygen.html  test_stateful_hierarchical_threshold_keygen.js  test_stateful_keygen.html  test_stateful_keygen.js  test_stateful_signing.html  test_stateful_signing.js  test_worker.js  verify_consolidation.html
cggmp21-wasm/tests/pkg/: README.md  cggmp21_wasm.d.ts  cggmp21_wasm.js  cggmp21_wasm_bg.wasm  cggmp21_wasm_bg.wasm.d.ts  package.json
cggmp21-wasm/web/: README.md  index.html  index.js  jest.config.js  keygen-test.html  keygen-test.js  package.json  server.js  test.js  worker.js
cggmp21-wasm/web-demo/: DEMO_SUMMARY.md  MESSAGE_MAP.md  README.md  READY_CHECK_IMPLEMENTATION.md  demo.js  demo.sh  index.html  package.json  protocol-worker.js  server.js
cggmp21/examples/: cli_cggmp21.rs  p2p_example.rs  polynomial_derivative_example.rs
cggmp21/src/: key_refresh.rs  key_share.rs  lib.rs  security_level.rs  signing.rs  trusted_dealer.rs  utils.rs  wasm_compat.rs
examples/birkhoff-vss/: Cargo.toml
examples/cli_cggmp21/: Cargo.toml
examples/cli_cggmp21/src/: main.rs
examples/p2p_example/: Cargo.toml
examples/p2p_example/src/: config.rs  handlers.rs  main.rs  message.rs  node.rs  simple_websocket_server.rs  websocket_server.rs
key-share/: Cargo.toml
key-share/src/: lib.rs  trusted_dealer.rs
log/: README.md  benches.txt  measure-perf-log.txt
logs/cargo-test/: 250408-09h56.txt  250410-12h29.txt  250411_12h43.txt  250421_10h09.txt  250421_11h32.txt  250421_12h25.txt  250426_21h06.txt  250508_12h34.txt  250509_10h15.txt  250509_13h20.txt  250513_10h50.txt  250527_17h55.txt  250530_21h10.txt  gauss_250411_10h01.txt  gauss_250411_10h24.txt  inverse_250411_10h28.txt
logs/measure-perf/: 250408-12h43.txt  250408-17h01.txt  250409-10h43.txt  250410-11h43.txt  250410-12h01.txt  250411_12h51.txt  250411_12h55.txt  250411_15h11.txt  250411_16h07.txt  250411_16h34.txt  250418_14h12.txt  250421_10h41.txt  250421_12h25.txt  250428_16h50.txt  250505_11h10.txt  250529_15h45.txt  250530_14h10.txt  250531_14h10.txt  250620_14h10.txt  250622_08h29_enable_pre_compute_table.txt  250622_14h10.txt  250622_17h10.txt  250622_20h10.txt  250622_22h10.txt  (+7 more)
p2p-network/: Cargo.toml  README.md  build.rs
p2p-network/examples/: simple_message.rs  simple_node.rs
p2p-network/src/: config.rs  handler.rs  key.rs  lib.rs  message.rs  mock.rs  native.rs  node.rs  transport.rs  wasm.rs
p2p-network/src/native/: handler.rs  network.rs  transport.rs
p2p-network/tests/: integration_test.rs
p2p-network/wasm-example/: Cargo.toml  README.md  index.html
p2p-network/wasm-example/src/: lib.rs
src/: main.rs  native.rs  network.rs  wasm.rs
tasks/: PRD.md  task_1.md  task_10.md  task_11.md  task_12.md  task_13.md  task_14.md  task_15.md  task_2.md  task_3.md  task_4.md  task_5.md  task_6.md  task_7.md  task_8.md  task_9.md
test-data/: precomputed_paillier_keys.json  precomputed_shares_splited.json
tests/: Cargo.toml  birkhoff-test.xlsx  ~$birkhoff-test.xlsx
wasm/no_std/: Cargo.toml  example.js  index.html  server.py  websocket-test.html
wasm/no_std/src/: config.rs  handlers.rs  lib.rs  node.rs  websocket.rs
wasm/no_std/tests/: wasm_test.rs
(+47 files in other folders)
