[package]
name = "cggmp21-wasm"
version = "0.1.0"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1.7"
js-sys = "0.3"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6.5"
rand = { workspace = true }
rand_chacha = "0.3"
getrandom = { version = "0.2", features = ["js"] }
base64 = "0.21"
digest = { workspace = true }
generic-ec = {git="https://github.com/nxhieu3102/generic-ec", branch="feat/integrate-cggmp21", workspace = true }
generic-ec-zkp = {git="https://github.com/nxhieu3102/generic-ec", branch="feat/integrate-cggmp21", workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
round-based = { workspace = true }

# Internal crates
cggmp21-keygen = { workspace = true }
rand_dev.workspace = true

[dependencies.web-sys]
version = "0.3"
features = [
  'BinaryType',
  'Blob',
  'ErrorEvent',
  'FileReader',
  'MessageEvent',
  'ProgressEvent',
  'WebSocket',
  'Worker',
  'console',
  'Document',
  'Element', 
  'HtmlElement',
  'Node',
  'Window',
  'Performance',
  'PerformanceTiming',
]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
