[package]
name = "p2p-network"
version = "0.1.0"
edition = "2021"
description = "A modular P2P network library supporting both native and web environments"
license = "MIT OR Apache-2.0"

[features]
default = ["native"]
native = ["tokio", "std", "tracing-subscriber", "ctrlc"]
wasm = ["wasm-bindgen", "wasm-bindgen-futures", "web-sys", "js-sys", "getrandom/js", "std"]
std = []

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"], default-features = false }
bincode = "1.3"

# Async
futures = { version = "0.3", features = ["executor", "std"] }
futures-channel = { version = "0.3", features = ["std"] }
futures-util = { version = "0.3", features = ["std", "sink", "io"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Crypto - using simpler deps until we have proper ed25519 integration
rand = { version = "0.8", default-features = false }
getrandom = { version = "0.2", features = ["js"], optional = true }
sha2 = { version = "0.10", default-features = false }

# Logging
tracing = { version = "0.1.40", default-features = false }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"], optional = true }

# Utilities - native only
ctrlc = { version = "3.4.0", optional = true }

# Native-only dependencies
tokio = { version = "1.0", features = ["full"], optional = true }

# WASM-only dependencies
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", features = [
    "BlobEvent",
    "ErrorEvent",
    "FileReader",
    "MessageEvent",
    "ProgressEvent",
    "WebSocket",
    "console",
    "Window",
    "Storage",
    "Document",
], optional = true }

[lib]
name = "p2p_network"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[example]]
name = "simple_message"
path = "examples/simple_message.rs"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz"]
