[package]
name = "cli_cggmp21"
version = "0.1.0"
edition = "2024"

[dependencies]
round-based = { workspace = true, features = ["derive", "dev"] }
rand = { workspace = true }
anyhow = "1"
futures = "0.3.30"
libp2p = { version = "0.55", features = [ "tokio", "quic"] }
libp2p-stream = { version = "0.3.0-alpha" }
tokio = { version = "1.38", features = ["full"] }
tokio-stream = "0.1.7"
tracing = "0.1.41"
tracing-subscriber = {version = "0.3.19", features = ["env-filter"] }
