[package]
name = "p2p-network-wasm-example"
version = "0.1.0"
edition = "2021"
description = "WASM example for the P2P network library"

[lib]
crate-type = ["cdylib"]

[dependencies]
p2p-network = { path = "..", features = ["wasm"], default-features = false }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = { version = "0.1.7", optional = true }

[features]
default = ["console_error_panic_hook"]

[profile.release]
opt-level = "s"
lto = true 
